--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/yup": "^0.32.0",
-    "firebase": "^9.22.0",
+    "firebase": "^8.10.1",
     "js-cookie": "^3.0.5",
     "lint-staged": "^13.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/firebase": "^3.2.1",
     "autoprefixer": "^10.4.14",
     "husky": "^8.0.3",
     "postcss": "^8.4.23",
