--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/dayjs": "^2.16.0",
+    "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.1",
+    "@mui/styled-engine": "^5.13.2",
+    "@mui/x-date-pickers": "^6.10.1",
+    "@mui/x-date-pickers-pro": "^6.10.1",
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
@@ -14,10 +19,14 @@
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
     "@types/yup": "^0.32.0",
+    "bootstrap": "^5.3.0",
+    "dayjs": "^1.11.9",
     "firebase": "^8.10.1",
     "js-cookie": "^3.0.5",
     "lint-staged": "^13.2.2",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
     "react-icons": "^4.10.1",
@@ -58,6 +67,7 @@
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
+    "@types/react-dates": "^21.8.3",
     "autoprefixer": "^10.4.14",
     "husky": "^8.0.3",
     "postcss": "^8.4.23",
