--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "lint-staged": "^13.2.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
+    "react-datepicker": "^4.16.0",
     "react-dates": "^21.8.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.1",
