--- a/package.json
+++ b/package.json
@@ -3,25 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@date-io/dayjs": "^2.16.0",
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.1.1",
-    "@mui/styled-engine": "^5.13.2",
-    "@mui/x-date-pickers": "^6.10.1",
-    "@mui/x-date-pickers-pro": "^6.10.1",
     "@react-oauth/google": "^0.11.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/moment": "^2.13.0",
     "@types/node": "^16.18.31",
     "@types/react": "^18.2.6",
+    "@types/react-dates": "^21.8.3",
     "@types/react-dom": "^18.2.4",
     "@types/yup": "^0.32.0",
     "bootstrap": "^5.3.0",
-    "dayjs": "^1.11.9",
-    "firebase": "^8.10.1",
+    "firebase": "^10.1.0",
     "js-cookie": "^3.0.5",
     "lint-staged": "^13.2.2",
     "moment": "^2.29.4",
@@ -68,7 +65,8 @@
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
-    "@types/react-dates": "^21.8.3",
+    "@types/js-cookie": "^3.0.3",
+    "@types/react-datepicker": "^4.15.0",
     "autoprefixer": "^10.4.14",
     "husky": "^8.0.3",
     "postcss": "^8.4.23",
